Feature: Note my git history was lost of the past months of work. This is why this is one giant commit for everything.

--- a/example.env
+++ b/example.env
@@ -2,15 +2,18 @@
 # Edit the variables below
 VRCHAT_USERNAME=blackwolfwoof
 VRCHAT_PASSWORD="coolpassword" # If " doesn't work. use '
-TOTP_SEED=SFZIUDSFOISDFSDFHSDKHFUSDOISDSDF
+VRCHAT_TOTP_SEED=SFZIUDSFOISDFSDFHSDKHFUSDOISDSDF
 GROUP_ID=grp_3f579901-b1a3-4a7b-af67-db07c7287734
 
 # Expert (DO NOT CHANGE IF YOU DON'T KNOW WHAT YOU ARE DOING)
 API_DELAY=1000 # Anti ratelimit. DO NOT CHANGE IF YOU DON'T KNOW WHAT YOU ARE DOING. Set to 1000ms by default
 CACHE_EXPIRE=60 # in minutes
-LOGLEVEL=DEBUG # DEBUG, INFO, WARN, ERROR
+LOGLEVEL=INFO # DEBUG, INFO, WARN, ERROR
 PORT=3001
+KEYV_FILE=./data.json
 
 # No touchie. (DO NOT CHANGE)
-VRCHAT_TOKEN=
-USERAGENT=LogLupus/0.2.7 wolf@blackwolfwoof.com
+CODENAME=LogLupusSoftware
+VERSION=0.3.0
+CONTACT_EMAIL=wolf@blackwolfwoof.com
+
