--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "js-string-cleaner": "^1.2.0",
+    "keyv": "^5.4.0",
+    "keyv-file": "^5.1.3",
     "node-cache": "^5.1.2",
-    "otplib": "^12.0.1",
     "quick.db": "^9.1.7",
     "remove-accents": "^0.5.0",
     "say": "^0.16.0",
     "sound-play": "^1.1.0",
+    "typescript": "^5.9.2",
+    "vrchat": "^1.20.0-next.1752332210",
     "ws": "^8.18.1"
   }
 }
